# Brainco_identification

./: .gitignore  CMakeLists.txt  MUJOCO_LOG.TXT  README.md  main.cpp  main_filter.cpp  main_solve.cpp  new_format.txt
URDF/urdf/: revoarm_bimanual_revo2.urdf  revoarm_bimanual_revo2.urdf.bak
config/: butterworth_filter.yaml  excite_trajectory.yaml  identification.yaml  kinematic_params.yaml
data/: Step1_butterworth.m  filtered_data.csv  revoarm_filter.m  revoarm_filtered_data_condnum_56.12_0618.csv  revoarm_filtered_data_condnum_56.12_0618.mat  revoarm_right_data_read_excitation_56.12_0618.txt  txt2data_revoarm.m
doc/: TODO.md  body2inertial.md  github_usage.md  new_identification_plan.md  readme_old.md  to_pino.md
include/: algorithms.hpp  base_parameter.hpp  body2inertial.hpp  butterworth_filter.hpp  csv_io.hpp  data_loader.hpp  dynamics_params.hpp  dynamics_regressor.hpp  fast_regressor.hpp  regressor_factory.hpp  revoarm_new_regressor.hpp  rigid_body.hpp  robot_config_loader.hpp  robot_utils.hpp  serial_arm_regressor.hpp  trajectory_optimizer.hpp
matlab/: get_excite_traj.m  revoarm_right_getY_cpp.m  test_obj.m  test_regressor.m  x_opt.mat
robots/revoarm_left/config/: butterworth_filter.yaml  friction_identification.yaml  friction_trajectory.yaml  identification.yaml  inertia_identification.yaml  kinematic_params.yaml
robots/revoarm_left/data_friction/: friction_trajectory_20260625_150107.csv
robots/revoarm_left/data_inertia/: bimanual_excite_traj_20260625_145639.txt  revoarm_left_data_read_excitation_56.12_adjusted_20260622_002539.txt
robots/revoarm_right/config/: butterworth_filter.yaml  dynamic_prior_params.yaml  excite_trajectory.yaml  excite_trajectory.yaml.bak  friction_identification.yaml  friction_trajectory.yaml  identification.yaml  inertia_PC_identification.yaml  inertia_identification.yaml  inertia_prior.yaml  kinematic_params.yaml
robots/revoarm_right/data/: bimanual_excite_traj_20260624_202430.txt  revoarm_right_data_read_excitation_56.12_adjusted_20260622_161938.txt
robots/revoarm_right/data_base_inertia/: revoarm_right_excitation_trajectory_20260627_204800.txt  revoarm_right_filtered_data.csv
robots/revoarm_right/data_friction/: friction_trajectory_20260624_212714.csv  friction_trajectory_20260624_233323.csv
robots/revoarm_right/result_base_inertia/: revoarm_right_base_inertia_identification.yaml
robots/revoarm_right/result_inertia_PC/: revoarm_right_inertia_identification.yaml
robots/revoarm_right/result_pf/: revoarm_right_pf_identification.yaml
robots/single_right/config/: excite_trajectory.yaml  friction_identification.yaml  friction_trajectory.yaml  identification.yaml  inertia_identification.yaml  kinematic_params.yaml
robots/single_right/data_inertia/: single_right_excitation_trajectory_20260623_141852.txt  single_traj0630_20260630_151035.txt
scripts/: backfill_urdf.py  csv_traj2txt.py  gen_matlab_regressor.py  generate_prior_yaml.py  plot_filtered_csv_data.py  plot_filtered_data.py  plot_origin_txt_data.py  revoarm_right_data_read_excitation_56.12_adjusted.csv  revoarm_right_data_read_excitation_56.12_adjusted.txt  solve_with_priors.py  txt_traj2csv.py  view_robot.py  view_robot_and_traj.py
src/: algorithms.cpp  base_parameter.cpp  body2inertial.cpp  butterworth_filter.cpp  csv_io.cpp  data_loader.cpp  dynamics_params.cpp  fast_regressor.cpp  regressor_factory.cpp  revoarm_new_regressor.cpp  robot_config_loader.cpp  robot_utils.cpp  serial_arm_regressor.cpp  trajectory_optimizer.cpp
src/app/: main_calc_base_params.cpp  main_calc_rank.cpp  main_filter.cpp  main_filter_and_solve.cpp  main_filter_and_solve_inertia.cpp  main_get_excite_traj.cpp  main_get_friction_traj.cpp  main_remove_gravity.cpp  main_solve.cpp  main_solve_PF.cpp  main_solve_base_inertia.cpp  main_solve_friction.cpp  main_solve_inertia.cpp  main_solve_inertia_PC.cpp  main_traj.cpp  test_fast_regressor.cpp
src/qt/: main.cpp  main_window.cpp  main_window.hpp
